[gd_scene load_steps=13 format=3 uid="uid://c8r83243ombdv"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_fbswu"]
[ext_resource type="PackedScene" uid="uid://dl7ke3lprvgax" path="res://btn.tscn" id="1_gk3kj"]
[ext_resource type="Texture2D" uid="uid://bs5mxgaskhs2y" path="res://scene1.png" id="2_uabg0"]
[ext_resource type="Script" path="res://manageur.gd" id="4_xmjoi"]
[ext_resource type="Texture2D" uid="uid://c5ajdyo4yrk5c" path="res://intense-fiery-explosion-with-billowing-smoke-on-a-transparent-background-png.webp" id="5_lypw1"]
[ext_resource type="Texture2D" uid="uid://ccps1nhdkffbx" path="res://loose2.jpg" id="5_vjyno"]
[ext_resource type="Script" path="res://digicode.gd" id="6_rta18"]
[ext_resource type="Texture2D" uid="uid://cglxqkv5502d0" path="res://btnGamma.png" id="8_7ia42"]
[ext_resource type="Script" path="res://btn_gamma.gd" id="8_vqkph"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8xilw"]
atlas = ExtResource("8_7ia42")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vubf7"]
atlas = ExtResource("8_7ia42")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4kbux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xilw")
}],
"loop": true,
"name": &"Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vubf7")
}],
"loop": true,
"name": &"On",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]
position = Vector2(0, -1)
script = ExtResource("1_fbswu")

[node name="Scene1" type="Sprite2D" parent="."]
texture = ExtResource("2_uabg0")

[node name="Aide" type="Button" parent="."]
offset_left = 215.0
offset_top = -70.0
offset_right = 277.0
offset_bottom = -39.0
text = "Aide"

[node name="Menue" type="Button" parent="."]
offset_left = 215.0
offset_top = -105.0
offset_right = 277.0
offset_bottom = -74.0
text = "Menue"

[node name="Note" type="TextEdit" parent="."]
offset_left = -185.0
offset_top = -92.0
offset_right = -68.0
offset_bottom = -52.0
placeholder_text = "Votre texte ici"
metadata/_edit_use_anchors_ = true

[node name="btn_loose1" parent="." instance=ExtResource("1_gk3kj")]
position = Vector2(0, 115)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="manageur" type="Node" parent="."]
script = ExtResource("4_xmjoi")

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 66.0
offset_top = -85.0
offset_right = 111.0
offset_bottom = -62.0
text = "Timer"
metadata/_edit_use_anchors_ = true

[node name="ResetButton" type="Button" parent="."]
offset_left = -269.0
offset_top = -151.0
offset_right = -208.0
offset_bottom = -120.0
text = "restart"
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = -757.0
offset_top = -360.0
offset_right = -713.0
offset_bottom = -316.0
pivot_offset = Vector2(477, 110)
columns = 4

[node name="FlagButton" type="Button" parent="."]
offset_left = -676.0
offset_top = -356.0
offset_right = -584.0
offset_bottom = -264.0
pivot_offset = Vector2(396, 106)
text = "d"

[node name="RevealButton" type="Button" parent="."]
offset_left = -557.0
offset_top = -357.0
offset_right = -465.0
offset_bottom = -265.0
pivot_offset = Vector2(277, 107)
text = "f"

[node name="Loose2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-160, 7)
scale = Vector2(0.781111, 0.781111)
texture = ExtResource("5_vjyno")

[node name="loose1" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5, 16)
scale = Vector2(0.24375, 0.24375)
texture = ExtResource("5_lypw1")
offset = Vector2(-7.62939e-05, -24.6153)

[node name="Digicode" type="Area2D" parent="."]
script = ExtResource("6_rta18")

[node name="Digicodebtn1" type="Button" parent="Digicode"]
offset_left = 81.0
offset_top = 97.0
offset_right = 99.0
offset_bottom = 128.0
text = "0"

[node name="Digicodebtn2" type="Button" parent="Digicode"]
offset_left = 101.0
offset_top = 97.0
offset_right = 119.0
offset_bottom = 128.0
text = "0"

[node name="Digicodebtn3" type="Button" parent="Digicode"]
offset_left = 122.0
offset_top = 97.0
offset_right = 140.0
offset_bottom = 128.0
text = "0"

[node name="btnGamma" type="Area2D" parent="."]
visible = false
script = ExtResource("8_vqkph")

[node name="btnGamma1" type="Button" parent="btnGamma"]
offset_left = -147.0
offset_top = 94.0
offset_right = -121.0
offset_bottom = 127.0

[node name="btnGammaAnnim" type="AnimatedSprite2D" parent="btnGamma/btnGamma1"]
texture_filter = 1
position = Vector2(13, 16)
sprite_frames = SubResource("SpriteFrames_4kbux")
animation = &"On"

[node name="btnGamma2" type="Button" parent="btnGamma"]
offset_left = -118.0
offset_top = 95.0
offset_right = -92.0
offset_bottom = 126.0

[node name="btnGammaAnnim" type="AnimatedSprite2D" parent="btnGamma/btnGamma2"]
texture_filter = 1
position = Vector2(13, 15)
sprite_frames = SubResource("SpriteFrames_4kbux")
animation = &"On"

[node name="btnGamma3" type="Button" parent="btnGamma"]
offset_left = -89.0
offset_top = 93.0
offset_right = -62.0
offset_bottom = 126.0

[node name="btnGammaAnnim" type="AnimatedSprite2D" parent="btnGamma/btnGamma3"]
texture_filter = 1
position = Vector2(14, 17)
sprite_frames = SubResource("SpriteFrames_4kbux")
animation = &"On"
